tui/src/pager/snapshots/tui__pager__explorer__tests__explorer_browser_file.snap
---
source: tui/src/pager/explorer.rs
expression: terminal.backend()
---
"hello                                            |preview                                           "
"world                                            |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Browser (1/1)                     [            TMPDIR            ]                            h help"
