tui/src/pager/snapshots/tui__pager__explorer__tests__explorer_dir_empty.snap
---
source: tui/src/pager/explorer.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"(empty)                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Browser (1/0)                     [            TMPDIR            ]                            h help"
