tui/src/pager/snapshots/tui__pager__explorer__tests__explorer_dir_files.snap
---
source: tui/src/pager/explorer.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"> a.txt                                          |                                                  "
"  b.txt                                          |                                                  "
"  c.txt                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Browser (1/3)                     [            TMPDIR            ]                            h help"
