tui/src/pager/snapshots/tui__pager__explorer__tests__explorer_focus_preview.snap
---
source: tui/src/pager/explorer.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"  a.txt                                          |                                                  "
"  b.txt                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Preview (1/1)                     [            TMPDIR            ]                            h help"
